--- a/docs/style.css
+++ b/docs/style.css
@@ -32,6 +32,7 @@ textarea,
   border: 1px solid #ddd;
   outline: none;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  resize: none;
 }
 
 h2,h1,h3,p,
